Readability of character names homepage fixed

--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ h1 .character_bio_name
   flex-direction: row;
   align-content: center;
   justify-content: space-around;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
   padding: 20px 20px;
   margin: 10px;
   border-radius: 20px;
@@ -334,7 +334,7 @@ h1 .character_bio_name
   animation: slide_in_bottom 1s;
 
 
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 20px;
   margin: 10px;
   padding: 20px;
@@ -353,10 +353,17 @@ h1 .character_bio_name
 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: baseline;
   flex-wrap: wrap;
   gap: 10px 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 20px 10px;
+  border-radius: 10px;
+  animation: slide_in_bottom 900ms ease-in-out;
 }
+
+  
 
 
 
@@ -448,12 +455,11 @@ h1 .character_bio_name
 
 .character_frame_name
 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-decoration: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  animation: fade_in 1s;
-  background-color: rgba(255, 255, 255, 0.1);
-  padding: 2%;
+  text-align: center;
+  padding-top: 5px;
 }
 
 
@@ -509,7 +515,6 @@ a:link
 { 
   text-decoration: none;
   color: purple;
-  animation: fade_in 1s ease-out;
 }
 
 a:visited 
